# DO_LAB2_MaxClique

./: .gitignore  CMakeLists.txt  README.md
source/: clique_stud.cpp  clique_stud_3.cpp
